--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,3 +108,13 @@
 .markdown ul li {
     margin: 10px 0;
 }
+
+/* RELATED PRODUCT CAROUSEL STYLING CUSTOMIZATION */
+
+.react-multiple-carousel__arrow--left {
+    left: calc(2% + 1px) !important;
+}
+
+.react-multiple-carousel__arrow--right {
+    right: calc(2% + 1px) !important;
+}
